Add the ability to override kubeadm config templates
Master and node CloudFormation stacks are given parameters which may contain
a Go template for kubeadm init and join configurations. If a value is not
given, the default built into the AMI will be used instead.

--- a/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-init-config.service
+++ b/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-init-config.service
@@ -18,6 +18,7 @@ Type=oneshot
 # Environment=KEIGHTS_IMAGE_REPOSITORY=
 # Environment=KEIGHTS_KUBERNETES_VERSION=
 # Environment=KEIGHTS_AZS=
+Environment=KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE=/usr/share/keights/kubeadm-init-config.yaml.template
 ExecStart=/bin/sh -c ' \
     while true; do \
       [ -f /run/kubernetes/bootstrap-token ] && break; \
@@ -37,7 +38,7 @@ ExecStart=/bin/sh -c ' \
             --retry-delay 2 \
             http://169.254.169.254/latest/meta-data/local-ipv4` && \
     /usr/bin/keights template \
-      -t /usr/share/keights/kubeadm-init-config.yaml.template \
+      -t ${KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE} \
       -D /var/lib/kubeadm/config.yaml \
       -v ClusterDomain=${KEIGHTS_CLUSTER_DOMAIN} \
       -v EtcdDomain=${KEIGHTS_ETCD_DOMAIN} \
