--- a/stack/cloudformation/master-stacked.yml
+++ b/stack/cloudformation/master-stacked.yml
@@ -133,9 +133,15 @@ Parameters:
         "log-driver": "journald",
         "storage-driver": "overlay2"
       }
+  KubeadmInitConfigTemplate:
+    Description: >-
+      Template for kubeadm init config file.
+    Type: String
+    Default: '""'
 
 Conditions:
   HasThreeMasters: !Equals [!Ref NumInstances, 3]
+  HasKubeadmInitConfigTemplate: !Not [!Equals [!Ref KubeadmInitConfigTemplate, '""']]
 
 Resources:
   SubnetToAzFunction:
@@ -345,6 +351,11 @@ Resources:
           - |
             #cloud-config
             write_files:
+              - path: /etc/keights/kubeadm-init-config.yaml.template
+                owner: root:root
+                permissions: '0644'
+                content: ${KubeadmInitConfigTemplate}
+
               - path: /etc/docker/daemon.json
                 owner: root:root
                 permissions: '0644'
@@ -393,6 +404,7 @@ Resources:
                   Environment=KEIGHTS_IMAGE_REPOSITORY=${ImageRepository}
                   Environment=KEIGHTS_KUBERNETES_VERSION=${KubernetesVersion}
                   Environment=KEIGHTS_AZS=${AvailabilityZones},
+                  ${KubeadmInitConfigTemplateEnv}
 
               - path: /etc/systemd/system/keights-controller-signal.service.d/environment.conf
                 owner: root:root
@@ -410,7 +422,11 @@ Resources:
               - systemctl start --no-block keights-kubeadm-init-stacked.service
               - systemctl start --no-block keights-controller-signal.service
 
-          - { AvailabilityZones: !GetAtt SubnetToAz.AvailabilityZones }
+          - AvailabilityZones: !GetAtt SubnetToAz.AvailabilityZones
+            KubeadmInitConfigTemplateEnv: !If
+              - HasKubeadmInitConfigTemplate
+              - Environment=KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE=/etc/keights/kubeadm-init-config.yaml.template
+              - ''
 
 Outputs:
   LoadBalancerDnsName:
