--- a/stack/cloudformation/etcd.yml
+++ b/stack/cloudformation/etcd.yml
@@ -185,7 +185,9 @@ Resources:
     Properties:
       AutoScalingGroupName: !Ref AWS::StackName
       DesiredCapacity: !Ref NumInstances
-      LaunchConfigurationName: !Ref LaunchConfiguration
+      LaunchTemplate:
+        LaunchTemplateId: !Ref LaunchTemplate
+        Version: !GetAtt LaunchTemplate.LatestVersionNumber
       MaxSize: !Ref NumInstances
       MinSize: !Ref NumInstances
       VPCZoneIdentifier: !Ref SubnetIds
@@ -246,21 +248,22 @@ Resources:
         - Key: etcd:instance
           Value: 3
 
-  LaunchConfiguration:
-    Type: AWS::AutoScaling::LaunchConfiguration
+  LaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      IamInstanceProfile: !Ref InstanceProfile
-      ImageId: !Ref ImageId
-      InstanceType: !Ref InstanceType
-      KeyName: !Ref KeyPair
-      PlacementTenancy: default
-      SecurityGroups: !Ref SecurityGroups
-      UserData:
-        Fn::Base64:
-          !Sub
-          - |
-            #cloud-config
-            write_files:
+      LaunchTemplateData:
+        IamInstanceProfile:
+          Name: !Ref InstanceProfile
+        ImageId: !Ref ImageId
+        InstanceType: !Ref InstanceType
+        KeyName: !Ref KeyPair
+        SecurityGroupIds: !Ref SecurityGroups
+        UserData:
+          Fn::Base64:
+            !Sub
+            - |
+              #cloud-config
+              write_files:
               - path: /etc/docker/daemon.json
                 owner: root:root
                 permissions: '0644'
@@ -325,14 +328,14 @@ Resources:
                   [Service]
                   Environment=KEIGHTS_ETCD_IMAGE=${ImageRepository}/etcd:${EtcdVersion}
 
-            runcmd:
+              runcmd:
               - systemctl daemon-reload
               - systemctl enable var-lib-etcd.mount
               - systemctl enable etcd.service
               - systemctl start --no-block etcd.service
               - systemctl start --no-block keights-etcd-signal.service
 
-          - { AvailabilityZones: !GetAtt SubnetToAz.AvailabilityZones }
+            - { AvailabilityZones: !GetAtt SubnetToAz.AvailabilityZones }
 
 Outputs:
   AutoScalingGroup:
