--- a/stack/cloudformation/master-external.yml
+++ b/stack/cloudformation/master-external.yml
@@ -174,7 +174,9 @@ Resources:
     Properties:
       AutoScalingGroupName: !Ref AWS::StackName
       DesiredCapacity: !Ref NumInstances
-      LaunchConfigurationName: !Ref LaunchConfiguration
+      LaunchTemplate:
+        LaunchTemplateId: !Ref LaunchTemplate
+        Version: !GetAtt LaunchTemplate.LatestVersionNumber
       MaxSize: !Ref NumInstances
       MinSize: !Ref NumInstances
       VPCZoneIdentifier: !Ref MasterSubnetIds
@@ -195,21 +197,22 @@ Resources:
           - AlarmNotification
           - ScheduledActions
 
-  LaunchConfiguration:
-    Type: AWS::AutoScaling::LaunchConfiguration
+  LaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      IamInstanceProfile: !Ref InstanceProfile
-      ImageId: !Ref ImageId
-      InstanceType: !Ref InstanceType
-      KeyName: !Ref KeyPair
-      PlacementTenancy: default
-      SecurityGroups: !Ref SecurityGroups
-      UserData:
-        Fn::Base64:
-          !Sub
-          - |
-            #cloud-config
-            write_files:
+      LaunchTemplateData:
+        IamInstanceProfile:
+          Name: !Ref InstanceProfile
+        ImageId: !Ref ImageId
+        InstanceType: !Ref InstanceType
+        KeyName: !Ref KeyPair
+        SecurityGroupIds: !Ref SecurityGroups
+        UserData:
+          Fn::Base64:
+            !Sub
+            - |
+              #cloud-config
+              write_files:
               - path: /etc/keights/kubeadm-init-config.yaml.template
                 owner: root:root
                 permissions: '0644'
@@ -257,17 +260,17 @@ Resources:
                   Environment=KEIGHTS_STACK_NAME=${AWS::StackName}
                   Environment=KEIGHTS_MASTER=true
 
-            runcmd:
+              runcmd:
               - systemctl daemon-reload
               - systemctl enable kubelet.service
               - systemctl start --no-block keights-kubeadm-init-external.service
               - systemctl start --no-block keights-controller-signal.service
 
-          - AvailabilityZones: !Join [',', !Ref EtcdAvailabilityZones]
-            KubeadmInitConfigTemplateEnv: !If
-              - HasKubeadmInitConfigTemplate
-              - Environment=KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE=/etc/keights/kubeadm-init-config.yaml.template
-              - ''
+            - AvailabilityZones: !Join [',', !Ref EtcdAvailabilityZones]
+              KubeadmInitConfigTemplateEnv: !If
+                - HasKubeadmInitConfigTemplate
+                - Environment=KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE=/etc/keights/kubeadm-init-config.yaml.template
+                - ''
 
 Outputs:
   LoadBalancerDnsName:
