--- a/stack/cloudformation/master-external.yml
+++ b/stack/cloudformation/master-external.yml
@@ -115,10 +115,10 @@ Parameters:
     Description: >-
       Template for kubeadm init config file.
     Type: String
-    Default: '""'
+    Default: ''
 
 Conditions:
-  HasKubeadmInitConfigTemplate: !Not [!Equals [!Ref KubeadmInitConfigTemplate, '""']]
+  HasKubeadmInitConfigTemplate: !Not [!Equals [!Ref KubeadmInitConfigTemplate, '']]
 
 Resources:
   InstanceAttributeEventsRule:
@@ -216,7 +216,7 @@ Resources:
               - path: /etc/keights/kubeadm-init-config.yaml.template
                 owner: root:root
                 permissions: '0644'
-                content: ${KubeadmInitConfigTemplate}
+                content: ${KubeadmInitConfigTemplateContents}
 
               - path: /etc/docker/daemon.json
                 owner: root:root
@@ -271,6 +271,10 @@ Resources:
                 - HasKubeadmInitConfigTemplate
                 - Environment=KEIGHTS_KUBEADM_INIT_CONFIG_TEMPLATE=/etc/keights/kubeadm-init-config.yaml.template
                 - ''
+              KubeadmInitConfigTemplateContents: !If
+                - HasKubeadmInitConfigTemplate
+                - !Ref KubeadmInitConfigTemplate
+                - '""'
 
 Outputs:
   LoadBalancerDnsName:
